fixing tree overflow

--- a/Content/Styles/sb-admin-2.css
+++ b/Content/Styles/sb-admin-2.css
@@ -101,6 +101,7 @@
     position: absolute;
     width: 280px;
     margin-top: 51px;
+    overflow-x: auto;
   }
   .navbar-top-links .dropdown-messages,
   .navbar-top-links .dropdown-tasks,
